# mpl-altair

./: .gitignore  pyproject.toml  treefmt.toml
doc/: conf.py
src/mplaltair/: __init__.py  _axis.py  _convert.py  _data.py  _marks.py  _utils.py  parse_chart.py
tests/: test_axis.py  test_basic.py  test_convert.py  test_data.py  test_parse_chart.py  test_utils.py
