[project]
name = "mpl-altair"
version = "0.1.0"
description = "Convert altair objects to matplotlib figures"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["altair", "matplotlib", "pandas"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-mpl", "vega-datasets"]
all = ["mpl-altair[test]"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
mpl-altair = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.environments]
default = { features = ["all", "test"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
